2010-09-26 [michael]	3.4.0cvs3

	* autogen.sh
	* libclamd/Makefile.am
	* libclamd/Makefile.in
	* libclamd/clamd-plugin.c
	* po/POTFILES.in
	* po/clamd.pot
	* po/en_GB.po
	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/it.po
	* src/clamav_plugin.c
	* src/clamav_plugin_gtk.c
	    Hardening the library. Using alertpanel to show
	    info about found viruses. Added library to po.

2010-09-25 [michael]	3.4.0cvs2

	* AUTHORS
	* COPYING
	* ChangeLog
	* INSTALL
	* Makefile.am
	* NEWS
	* README
	* autogen.sh
	* commitHelper
	* configure.ac
	* libclamd/Makefile.am
	* libclamd/Makefile.in
	* libclamd/clamd-plugin.c
	* libclamd/clamd-plugin.h
	* po/ChangeLog
	* po/Makefile.in.in
	* po/Makevars
	* po/POTFILES.in
	* po/clamd.pot
	* po/en_GB.po
	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/it.po
	* po/remove-potcdate.sin
	* src/Makefile.am
	* src/Makefile.in
	* src/clamav_plugin.c
	* src/clamav_plugin.h
	* src/clamav_plugin_gtk.c

	* Checking in once again since the first time was not
	  fully completed.

2008-02-12 [wwp]	3.3.0cvs3

	* configure.ac
		Update requirements.

2008-02-12 [wwp]	3.3.0cvs2

	* src/clamav_plugin_gtk.c
		Updated to match folder_sel API changes.

2008-02-09 [paul]	3.3.0cvs1

	* aclocal.m4
		remove this file, it's in the way!

2008-02-08 [paul]	3.3.0

	3.3.0 released
	initial release as a separate plugin

2008-02-08 [paul]	3.2.0cvs75

	* configure.ac
	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/it.po
		submitted by Ricardo Mones Lastra, Flammie Pirinen,
		Pader Rezso and Andrea Spadaccini

2008-02-01 [paul]	3.2.0cvs74

	* configure.ac
	* po/Makevars
	* po/clamav.pot **REMOVED**
	* po/en_GB.po
		remove clamav.pot, add en_GB.po, fix Makevars

2008-01-31 [colin]	3.2.0cvs73

	* src/Makefile.am
		Fix make dist

2008-01-31 [colin]	3.2.0cvs72

	* configure ** REMOVED **
	* src/Makefile.am
		Fix linking

2008-01-31 [colin]	3.2.0cvs71

	* src/clamav_plugin.c
		Fix plugin_license

2008-01-31 [colin]	3.2.0cvs70

	* .cvsignore
	* AUTHORS
	* COPYING
	* INSTALL
	* Makefile.am
	* NEWS