@@ -9,7 +9,7 @@ dnl plugin version
 MAJOR_VERSION=3
 MINOR_VERSION=4
 MICRO_VERSION=0
-EXTRA_VERSION=3
+EXTRA_VERSION=4
 
 if test \( $EXTRA_VERSION -eq 0 \); then
     if test \( $MICRO_VERSION -eq 0 \); then
